fxi: 优化tags多选
